// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VList.js should render a dense component and match snapshot 1`] = `

<ul class="list list--dense">
</ul>

`;

exports[`VList.js should render a subheader component and match snapshot 1`] = `

<ul class="list list--subheader">
</ul>

`;

exports[`VList.js should render a threeLine component and match snapshot 1`] = `

<ul class="list list--three-line">
</ul>

`;

exports[`VList.js should render a twoLine component and match snapshot 1`] = `

<ul class="list list--two-line">
</ul>

`;

exports[`VList.js should render component and match snapshot 1`] = `

<ul class="list">
</ul>

`;
